--- a/src/scss/components/_eco-house.scss
+++ b/src/scss/components/_eco-house.scss
@@ -2,7 +2,7 @@
   position: relative;
   z-index: 2;
   padding-top: 120px;
-  background-image: url('./../img/forest.png');
+  background-image: url('./../img/forest.jpg');
   background-position: top -15% center;
   background-size: 100% auto;
   background-repeat: no-repeat;
